<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">
    <Button
            style="@style/custom_button"
            android:text="@string/jogar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btPlay" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            style="@style/custom_button"
            android:text="@string/ranking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btRanking" app:layout_constraintStart_toStartOf="@+id/btPlay"
            app:layout_constraintEnd_toEndOf="@+id/btPlay" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btPlay"/>
    <Button
            style="@style/custom_button"
            android:text="@string/sobre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSobre" app:layout_constraintStart_toStartOf="@+id/btPlay"
            app:layout_constraintEnd_toEndOf="@+id/btPlay" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btRanking"/>
    <Button
            style="@style/custom_button"
            android:text="@string/sair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSair" app:layout_constraintStart_toStartOf="@+id/btPlay"
            app:layout_constraintEnd_toEndOf="@+id/btPlay" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btSobre"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="79dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent" android:fontFamily="sans-serif-black"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="36sp" android:textAlignment="center"
            android:typeface="normal" android:textColor="#F2F2F2"/>
</androidx.constraintlayout.widget.ConstraintLayout>