<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.GameActivity">

    <TextView
            android:text="@string/escolha_sua_jogada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textChoosePlay" android:textColor="#FFFFFF"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textSize="24sp"
            android:fontFamily="monospace" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/tvPoints"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/pedra"
            android:id="@+id/ivRock"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivPaper"
            android:layout_marginTop="70dp" app:layout_constraintTop_toBottomOf="@+id/textChoosePlay"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/papel"
            android:id="@+id/ivPaper"
            app:layout_constraintStart_toEndOf="@+id/ivRock"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivScissors"
            app:layout_constraintTop_toTopOf="@+id/ivRock"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/tesoura"
            android:id="@+id/ivScissors"
            app:layout_constraintTop_toTopOf="@+id/ivRock" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toEndOf="@+id/ivPaper"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/sua_escolha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvYourChoice"
            android:fontFamily="monospace"
            android:textColor="@color/colorBgButton"
            android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"/>
    <TextView
            android:text="@string/computador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvComputerChoice"
            app:layout_constraintTop_toTopOf="@+id/tvYourChoice" app:layout_constraintEnd_toEndOf="@+id/ivScissors"
            android:layout_marginEnd="8dp" android:fontFamily="monospace"
            android:textColor= "@color/colorBgButton" />
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/ivRock" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvYourChoice"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/ivScissors"
            app:layout_constraintTop_toTopOf="@+id/imageView4"/>
    <TextView
            android:text="@string/voc_venceu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:textColor="@color/colorBgButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"
            android:fontFamily="monospace"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <TextView
            android:text="@string/voc_ganhou_1_ponto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPoints"
            android:textColor="@color/colorBgButton" app:layout_constraintEnd_toEndOf="@+id/tvResult"
            app:layout_constraintStart_toStartOf="@+id/tvResult" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvResult" android:textAlignment="center"
            android:fontFamily="monospace"/>
    <Button
            style="@style/custom_button"
            android:text="@string/jogar_novamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btPlayAgain" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.484" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ivRock"/>
</androidx.constraintlayout.widget.ConstraintLayout>